// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideNav /> #handleMenuToggleClick toggles menu when button is clicked 1`] = `
<div
  className="is-fluid grid side-nav-wrapper"
>
  <div
    className="row has-display-flex has-display-none-xlarge side-nav-expand"
  >
    <button
      aria-controls="side-nav-wrapper"
      aria-expanded={true}
      className="has-justify-content-center has-align-items-center has-display-flex has-display-none-xlarge"
      onClick={[Function]}
    >
      <Menu
        focusable="false"
        role="presentation"
        size={20}
      />
       
      <span
        className="has-black-text"
      >
        Explore
      </span>
    </button>
  </div>
  <nav
    className="row side-nav-menu accordion has-padding-3"
    data-accordion="side-nav-accordion"
    id="side-nav-wrapper"
  >
    <p
      className="version-text has-no-padding has-gray800-text is-xsmall-12 column"
    >
      Version 
      9.9.9
    </p>
    <div
      className="accordion-row is-xsmall-12 column has-no-padding"
      data-accordion-row="nav-acc-content0"
      data-visible="false"
      key="#"
    >
      <h4
        className="paragraph"
      >
        <button
          className="accordion-button"
          data-parent="side-nav-accordion"
          data-target="nav-acc-content0"
          id="nav-acc-button0"
        >
          Test Header
        </button>
      </h4>
      <ul
        className="accordion-content"
        id="nav-acc-content0"
      >
        <li
          key="Test 1"
          role="none"
        >
          <NavLink
            activeClassName="active"
            className="side-nav-link-item has-black-text is-display-flex has-align-items-center"
            onClick={[Function]}
            role="listitem"
            to="#"
          >
            <Link
              aria-current={null}
              className="side-nav-link-item has-black-text is-display-flex has-align-items-center"
              onClick={[Function]}
              role="listitem"
              to="#"
            >
              <a
                aria-current={null}
                className="side-nav-link-item has-black-text is-display-flex has-align-items-center"
                href="/"
                onClick={[Function]}
                role="listitem"
              >
                Test 1
                 
                <ChevronRight
                  focusable="false"
                  role="presentation"
                  size={16}
                />
              </a>
            </Link>
          </NavLink>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`<SideNav /> #handleMenuVisibility hides menu at or below 1199 1`] = `
<div
  className="is-fluid grid side-nav-wrapper"
>
  <div
    className="row has-display-flex has-display-none-xlarge side-nav-expand"
  >
    <button
      aria-controls="side-nav-wrapper"
      aria-expanded={false}
      className="has-justify-content-center has-align-items-center has-display-flex has-display-none-xlarge rotate-180"
      onClick={[Function]}
    >
      <Menu
        focusable="false"
        role="presentation"
        size={20}
      />
       
      <span
        className="has-black-text"
      >
        Explore
      </span>
    </button>
  </div>
  <nav
    className="row side-nav-menu accordion has-padding-3 has-display-none"
    data-accordion="side-nav-accordion"
    id="side-nav-wrapper"
  >
    <p
      className="version-text has-no-padding has-gray800-text is-xsmall-12 column"
    >
      Version 
      9.9.9
    </p>
    <div
      className="accordion-row is-xsmall-12 column has-no-padding"
      data-accordion-row="nav-acc-content0"
      data-visible="false"
      key="#"
    >
      <h4
        className="paragraph"
      >
        <button
          className="accordion-button"
          data-parent="side-nav-accordion"
          data-target="nav-acc-content0"
          id="nav-acc-button0"
        >
          Test Header
        </button>
      </h4>
      <ul
        className="accordion-content"
        id="nav-acc-content0"
      >
        <li
          key="Test 1"
          role="none"
        >
          <NavLink
            activeClassName="active"
            className="side-nav-link-item has-black-text is-display-flex has-align-items-center"
            onClick={[Function]}
            role="listitem"
            to="#"
          >
            <Link
              aria-current={null}
              className="side-nav-link-item has-black-text is-display-flex has-align-items-center"
              onClick={[Function]}
              role="listitem"
              to="#"
            >
              <a
                aria-current={null}
                className="side-nav-link-item has-black-text is-display-flex has-align-items-center"
                href="/"
                onClick={[Function]}
                role="listitem"
              >
                Test 1
                 
                <ChevronRight
                  focusable="false"
                  role="presentation"
                  size={16}
                />
              </a>
            </Link>
          </NavLink>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`<SideNav /> #handleMenuVisibility shows menu above 1199 1`] = `
<div
  className="is-fluid grid side-nav-wrapper"
>
  <div
    className="row has-display-flex has-display-none-xlarge side-nav-expand"
  >
    <button
      aria-controls="side-nav-wrapper"
      aria-expanded={true}
      className="has-justify-content-center has-align-items-center has-display-flex has-display-none-xlarge"
      onClick={[Function]}
    >
      <Menu
        focusable="false"
        role="presentation"
        size={20}
      />
       
      <span
        className="has-black-text"
      >
        Explore
      </span>
    </button>
  </div>
  <nav
    className="row side-nav-menu accordion has-padding-3"
    data-accordion="side-nav-accordion"
    id="side-nav-wrapper"
  >
    <p
      className="version-text has-no-padding has-gray800-text is-xsmall-12 column"
    >
      Version 
      9.9.9
    </p>
    <div
      className="accordion-row is-xsmall-12 column has-no-padding"
      data-accordion-row="nav-acc-content0"
      data-visible="false"
      key="#"
    >
      <h4
        className="paragraph"
      >
        <button
          className="accordion-button"
          data-parent="side-nav-accordion"
          data-target="nav-acc-content0"
          id="nav-acc-button0"
        >
          Test Header
        </button>
      </h4>
      <ul
        className="accordion-content"
        id="nav-acc-content0"
      >
        <li
          key="Test 1"
          role="none"
        >
          <NavLink
            activeClassName="active"
            className="side-nav-link-item has-black-text is-display-flex has-align-items-center"
            onClick={[Function]}
            role="listitem"
            to="#"
          >
            <Link
              aria-current={null}
              className="side-nav-link-item has-black-text is-display-flex has-align-items-center"
              onClick={[Function]}
              role="listitem"
              to="#"
            >
              <a
                aria-current={null}
                className="side-nav-link-item has-black-text is-display-flex has-align-items-center"
                href="/"
                onClick={[Function]}
                role="listitem"
              >
                Test 1
                 
                <ChevronRight
                  focusable="false"
                  role="presentation"
                  size={16}
                />
              </a>
            </Link>
          </NavLink>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`<SideNav /> #render renders 1`] = `
<SideNav>
  <div
    className="is-xsmall-12 is-xlarge-2 column has-no-padding"
    id="side-nav"
  >
    <div
      className="is-fluid grid side-nav-wrapper"
    >
      <div
        className="row has-display-flex has-display-none-xlarge side-nav-expand"
      >
        <button
          aria-controls="side-nav-wrapper"
          aria-expanded={false}
          className="has-justify-content-center has-align-items-center has-display-flex has-display-none-xlarge rotate-180"
          onClick={[Function]}
        >
          <Menu
            focusable="false"
            role="presentation"
            size={20}
          />
           
          <span
            className="has-black-text"
          >
            Explore
          </span>
        </button>
      </div>
      <nav
        className="row side-nav-menu accordion has-padding-3 has-display-none"
        data-accordion="side-nav-accordion"
        id="side-nav-wrapper"
      >
        <p
          className="version-text has-no-padding has-gray800-text is-xsmall-12 column"
        >
          Version 
          9.9.9
        </p>
        <div
          className="accordion-row is-xsmall-12 column has-no-padding"
          data-accordion-row="nav-acc-content0"
          data-visible="false"
          key="#"
        >
          <h4
            className="paragraph"
          >
            <button
              className="accordion-button"
              data-parent="side-nav-accordion"
              data-target="nav-acc-content0"
              id="nav-acc-button0"
            >
              Test Header
            </button>
          </h4>
          <ul
            className="accordion-content"
            id="nav-acc-content0"
          >
            <li
              key="Test 1"
              role="none"
            >
              <NavLink
                activeClassName="active"
                className="side-nav-link-item has-black-text is-display-flex has-align-items-center"
                onClick={[Function]}
                role="listitem"
                to="#"
              >
                <Link
                  aria-current={null}
                  className="side-nav-link-item has-black-text is-display-flex has-align-items-center"
                  onClick={[Function]}
                  role="listitem"
                  to="#"
                >
                  <a
                    aria-current={null}
                    className="side-nav-link-item has-black-text is-display-flex has-align-items-center"
                    href="/"
                    onClick={[Function]}
                    role="listitem"
                  >
                    Test 1
                     
                    <ChevronRight
                      focusable="false"
                      role="presentation"
                      size={16}
                    />
                  </a>
                </Link>
              </NavLink>
            </li>
          </ul>
        </div>
      </nav>
    </div>
  </div>
</SideNav>
`;
